--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "howler": "^2.2.3",
     "next": "13.4.2",
+    "next-compose": "^0.0.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4",
-    "use-sound": "^4.0.1"
+    "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/howler": "^2.2.7",
+    "file-loader": "^6.2.0"
   }
 }
